# tipstrr-analyzer

./: app.py  database.py  models.py  parser.py  pyproject.toml  render.yaml  requirements.txt
templates/: index.html
